# py-connect-4

./: IDEAS.md  README.md  main.py  pyproject.toml
src/connect_4/: local.py  main.py
src/connect_4/online/: client.py  server.py  utils.py
src/py_connect_4/online/: server.py
